; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strbuf.c_strbuf_node_cleanup.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strbuf.c_strbuf_node_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf_node = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.strbuf_node* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.strbuf_node* (%struct.strbuf_node*)* @strbuf_node_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.strbuf_node* @strbuf_node_cleanup(%struct.strbuf_node* %0) #0 {
  %2 = alloca %struct.strbuf_node*, align 8
  %3 = alloca i64, align 8
  store %struct.strbuf_node* %0, %struct.strbuf_node** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.strbuf_node*, %struct.strbuf_node** %2, align 8
  %7 = getelementptr inbounds %struct.strbuf_node, %struct.strbuf_node* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ult i64 %5, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %4
  %11 = load %struct.strbuf_node*, %struct.strbuf_node** %2, align 8
  %12 = getelementptr inbounds %struct.strbuf_node, %struct.strbuf_node* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load %struct.strbuf_node*, %struct.strbuf_node** %16, align 8
  %18 = call %struct.strbuf_node* @strbuf_node_cleanup(%struct.strbuf_node* %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i64, i64* %3, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %3, align 8
  br label %4

22:                                               ; preds = %4
  %23 = load %struct.strbuf_node*, %struct.strbuf_node** %2, align 8
  %24 = getelementptr inbounds %struct.strbuf_node, %struct.strbuf_node* %23, i32 0, i32 1
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = call i32 @free(%struct.TYPE_2__* %25)
  %27 = load %struct.strbuf_node*, %struct.strbuf_node** %2, align 8
  %28 = call %struct.strbuf_node* @mfree(%struct.strbuf_node* %27)
  ret %struct.strbuf_node* %28
}

declare dso_local i32 @free(%struct.TYPE_2__*) #1

declare dso_local %struct.strbuf_node* @mfree(%struct.strbuf_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
